[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
actix-web = "4.0"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"